--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = "0.25.0"
 egui = "0.25.0"
+egui_extras = "0.25.0"
 image = "0.24.8"
 thiserror = "1.0.56"
