--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 eframe = "0.25.0"
 egui = "0.25.0"
-egui_extras = "0.25.0"
+egui_extras = { version = "0.25.0", features = ["all_loaders"]}
 image = "0.24.8"
 thiserror = "1.0.56"
