--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.4.18"
+clap = { version = "4.4", features = ["derive"]}
 eframe = "0.25.0"
 egui = "0.25.0"
 egui_extras = { version = "0.25.0", features = ["all_loaders"]}
