--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "image_compare"
+name = "ks-image-compare"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+readme = "README.adoc"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
