added keywords and categories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "ks-image-compare"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "Compare images with ease"
 readme = "README.adoc"
+repository = "https://github.com/kober-systems/ks-image-compare.git"
+keywords = ["gui", "image-diff", "image-comparsion", "diff"]
+categories = ["gui","command-line-utilities", "development-tools", "multimedia::images", "visualization"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
