--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["gui","command-line-utilities", "development-tools", "multimedia::
 [dependencies]
 anyhow = "1.0.79"
 clap = { version = "4.4", features = ["derive"]}
-eframe = "0.25.0"
+eframe = { version = "0.25.0", features = ["default", "__screenshot"]}
 egui = "0.25.0"
 egui_extras = { version = "0.25.0", features = ["all_loaders"]}
 image = "0.24.8"
