--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ eframe = { version = "0.25.0", features = ["default", "__screenshot"]}
 egui = "0.25.0"
 egui_extras = { version = "0.25.0", features = ["all_loaders"]}
 image = "0.24.8"
+log = "0.4.21"
 thiserror = "1.0.56"
